# setuptools-odoo

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .travis.yml  110.bugfix  CHANGES.md  CHANGES.rst  DEVELOP.rst  MANIFEST.in  README.rst  mk_base_addons  mk_core_addons  odoo_server_autodiscover.py  pyproject.toml  setup.py  tox.ini
.github/workflows/: ci.yml  release.yml
docs/: Makefile  conf.py  index.rst
newsfragments/: 107.feature  108.bugfix  112.feature  116.bugfix  119.feature  125.feature  64.bugfix  65.feature  66.feature  67.bugfix  70.bugfix  81.feature  85.feature  93.feature  98.feature
setuptools_odoo/: __init__.py  addons-10c.txt  addons-10e.txt  addons-11c.txt  addons-11e.txt  addons-12c.txt  addons-12e.txt  addons-13c.txt  addons-13e.txt  addons-14c.txt  addons-14e.txt  addons-15c.txt  addons-15e.txt  addons-16c.txt  addons-16e.txt  addons-7c.txt  addons-8c.txt  addons-9c.txt  addons-9e.txt  base_addons.py  commands.py  core.py  external_dependencies.py  get_requirements.py  git_file_finder.py  git_postversion.py  make_default_setup.py  manifest.py  odoo_server_autodiscover.py  setup_keywords.py
tests/: __init__.py  test_get_addon_metadata.py  test_get_requirements.py  test_git_file_finder.py  test_git_postversion.py  test_install_requires.py  test_make_default_setup.py  test_manifest.py  test_prepare.py  test_setup_keywords.py
tests/data/addon1/: README.rst  __openerp__.py
tests/data/addon2/: __openerp__.py
tests/data/addon3_bad/: __openerp__.py
tests/data/addon4/: __openerp__.py
(+19 files in other folders)
