[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm[toml]>=3.4"]
build-backend = "setuptools.build_meta"

[tool.towncrier]
    underlines = "-+"
    title_format = "{version} ({project_date})"
    issue_format = "`#{issue} <https://github.com/acsone/setuptools-odoo/issues/{issue}>`_"
    directory = "newsfragments/"
    filename = "CHANGES.rst"

[tool.isort]
profile = 'black'
